projects/skies/k8s/nrt/manifests/postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        skies/group: db
    spec:
      nodeSelector:
        skies/node-role: infra
      containers:
        - name: postgres
          image: postgres:17-bookworm
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 50Gi
        storageClassName: local-path

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
      app: postgres
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 31703
      protocol: TCP
